<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/feature_fragment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Feature.FeatureFragment1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_carousel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="374:290"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_featured_videoThumbnail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_feature1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_ViewOfVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_featured_videoThumbnail"
                app:layout_constraintStart_toStartOf="@+id/img_featured_videoThumbnail"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/view_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="3dp"
                    app:srcCompat="@drawable/icon_eye" />

                <TextView
                    android:id="@+id/view_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/viewOfVideo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_10" />

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/featured_user_avatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_featured_videoThumbnail"
                app:srcCompat="@drawable/avatar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature_videoTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/video_title"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toStartOf="@id/img_videoRate"
                app:layout_constraintStart_toEndOf="@id/featured_user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/img_featured_videoThumbnail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/username"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@id/featured_user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/feature_videoTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature_video_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/video_category"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@id/featured_user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/feature_user_name" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_blueTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toTopOf="@+id/feature_video_category"
                app:layout_constraintStart_toEndOf="@id/feature_user_name"
                app:layout_constraintTop_toBottomOf="@id/feature_videoTitle"
                app:srcCompat="@drawable/bluetick" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_videoRate"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@id/rate_number"
                app:layout_constraintTop_toBottomOf="@+id/img_featured_videoThumbnail"
                app:srcCompat="@drawable/rate" />

            <TextView
                android:id="@+id/rate_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/video_rateNumber"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_featured_videoThumbnail" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_typeOfUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toEndOf="@id/featured_user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/feature_video_category">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_typeOfUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:padding="7dp"
                    android:text="@string/typeOfUser"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_10" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_timeOfCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toEndOf="@id/cardView_typeOfUser"
                app:layout_constraintTop_toBottomOf="@+id/feature_video_category">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_videoTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:padding="7dp"
                    android:text="@string/timeOfCategory"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_10" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>