<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_videoYouMayLike"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_15sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="374:107"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_videoYouMayLikeThumbnail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="175:100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_feature1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_ViewOfVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/view_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="3dp"
                app:srcCompat="@drawable/icon_eye" />

            <TextView
                android:id="@+id/txt_videoYouMayLike_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="@string/viewOfVideo"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_videoYouMayLikeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/img_videoYouMayLikeThumbnail">


            <TextView
                android:id="@+id/txt_videoYouMayLikeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="@string/timeOfVideo"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_videoYouMayLike_user_avatar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/img_videoYouMayLikeThumbnail"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_videoYouMayLike_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/username"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@+id/img_videoYouMayLike_user_avatar"
            app:layout_constraintStart_toEndOf="@id/img_videoYouMayLike_user_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_videoYouMayLike_blueTick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_videoYouMayLike_user_avatar"
            app:layout_constraintStart_toEndOf="@id/txt_videoYouMayLike_user_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bluetick" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_videoRate"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginEnd="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/txt_videoYouMayLike_videoTitle"
            app:layout_constraintEnd_toStartOf="@id/txt_videoYouMayLike_rate_number"
            app:layout_constraintTop_toBottomOf="@+id/img_videoYouMayLike_user_avatar"
            app:srcCompat="@drawable/rate" />

        <TextView
            android:id="@+id/txt_videoYouMayLike_rate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/video_rateNumber"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/txt_videoYouMayLike_videoTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_videoYouMayLike_user_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_videoYouMayLike_videoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="1"
            android:text="@string/video_title"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/img_videoRate"
            app:layout_constraintStart_toStartOf="@+id/img_videoYouMayLike_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_videoYouMayLike_user_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_videoYouMayLike_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="Just Move • A day ago"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/img_videoYouMayLike_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/txt_videoYouMayLike_videoTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_VideoYouMayLike_typeOfUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/img_videoYouMayLike_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/txt_videoYouMayLike_category">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_VideoYouMayLike_typeOfUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="7dp"
                android:text="@string/typeOfUser"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_timeOfCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardView_VideoYouMayLike_typeOfUser"
            app:layout_constraintTop_toBottomOf="@+id/txt_videoYouMayLike_category">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_videoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="7dp"
                android:text="@string/timeOfCategory"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>